# ghrepo-stats

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release-deploy.yml  testsuite.yml
ghrepo_stats/: show_gh_stats.py
test/: conftest.py  test_configreader.py  test_issue_pr_stats.py  test_star_stats.py  utils.py
