[metadata]
name = ghrepo-stats
version = attr: ghrepo_stats.__version__
author = mrbean-bremen
author_email = hansemrbean@googlemail.com
license = MIT
description = Command line tools for GitHub repo statistics
keywords = github, python
url = http://github.com/mrbean-bremen/ghrepo-stats
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Utilities

[options]
packages = find:
install_requires =
    pygithub
    matplotlib
    requests
    beautifulsoup4
include_package_data = True

[options.entry_points]
console_scripts =
    show-ghstats=ghrepo_stats.show_gh_stats:main
